--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/cometaworks/ember-cli-bing-map.git"
+    "url": "https://github.com/futoricky/ember-cli-bing-map.git"
   },
   "scripts": {
     "build": "ember build",
@@ -58,6 +58,6 @@
   },
   "ember-addon": {
     "configPath": "tests/dummy/config",
-    "demoURL": "http://cometaworks.github.io/ember-cli-bing-map/"
+    "demoURL": "http://futoricky.github.io/ember-cli-bing-map/"
   }
 }
